--- a/Intro.html
+++ b/Intro.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         Star Wars: The Sky's The Limit!!
+    <link rel="stylesheet" type="text/css" href="Intro.css">
     </head>
     <!-- <div>   </div> -->
         <body>
