jaden local version

--- a/Intro.html
+++ b/Intro.html
@@ -1,19 +1,18 @@
 <! DOCTYPE html>
 <html>
     <head>
-        Star Wars: The Sky's The Limit!!
     <link rel="stylesheet" type="text/css" href="Intro.css">
     </head>
     <!-- <div>   </div> -->
         <body>
             <!-- <img src=""></img> -->
-            
-            <p> 
-        Welcome to the space adventure of the legendary jedi knight, Luke Skywalker
+            <h1 id="text">Star Wars: The Sky's The Limit!</h1>
+            <p id="text"> 
+        Welcome to the space adventure of the legendary jedi knight, Luke Skywalker.
             
             </p>
-            <div> (After They Finish Fighting)Darth Vader: There is no escape! Don't make me destroy you. Luke, you do not yet realize your importance. You've only begun to discover your power! Join me, and I will complete your training! With our combined strength, we can end this destructive conflict, and bring order to the galaxy.Luke Skywalker: [angrily] I'll never join you!Vader: If only you knew the power of the Dark Side. Obi-Wan never told you what happened to your father.Luke: He told me enough! He told me you killed him!Vader: No, I am your father.Luke: [shocked] No. No! That's not true! That's impossible!Vader: Search your feelings; you know it to be true!Luke: NOOOOOOO! NOOOOOOOO!!!Vader: Luke, you can destroy the Emperor. He has foreseen this. It is your destiny! Join me, and together, we can rule the galaxy as father and son! Come with me. It is the only way. [Luke lets go of the projection and falls into the shaft]
-            </div>
+            <div id="text"> 
+            <a href="slide2.html">next</a>
         </body>
 
 </html>
