--- a/Intro.html
+++ b/Intro.html
@@ -12,7 +12,7 @@
             
             </p>
             <div id="text"> 
-            <a href="slide2.html">next</a>
+            <a href="slide2.html">Next</a>
         </body>
 
 </html>
