--- a/slide2.html
+++ b/slide2.html
@@ -9,7 +9,7 @@
   <p>The Young Jedi, Luke Skywalker, has crashed in a swamp on the Planet Dagobah after learning that he must be taught by the jedi Master Yoda. Luke then comes out of the crashed ship and sees Yoda's spirit. </p>
 
   </div></div>
-
+            <a href="slide3.html">Next</a>
             </p>    
         </body>
 </html>
