--- a/slide4.html
+++ b/slide4.html
@@ -1,4 +1,4 @@
 <img src="https://media.giphy.com/media/J1nr4o7oolWz6/giphy.gif">
 <body>
-    <a href="slide5.html">Next</a>
+    <a href="game.html">Next</a>
 </body>
